# advent-of-code

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
src/2023/: __init__.py
src/2023/day1/python/: test_day1.py
src/2023/day1/rust/: mod.rs
src/2023/day1/typescript/: main.test.ts
src/2023/day2/python/: day2.py  test_day2.py
src/2023/day2/rust/: mod.rs
src/2023/day2/typescript/: main.test.ts  main.ts
src/2023/day6/typescript/: main.test.ts
src/2024/day1/rust/: mod.rs
src/2024/day2/rust/: mod.rs
src/2024/day3/rust/: mod.rs
src/2024/day4/rust/: mod.rs
src/2024/day5/rust/: mod.rs
src/2024/day6/rust/: mod.rs
src/2024/day7/rust/: mod.rs
src/2024/day8/rust/: mod.rs
src/2025/day1/rust/: common.rs  mod.rs  part_a.rs  part_b.rs
src/2025/day2/rust/: common.rs  mod.rs  part_a.rs  part_b.rs
src/day1/: prompt_a.md  prompt_b.md
src/day1/python/: main.py  test_main.py
src/day1/typescript/: main.test.ts  main.ts
src/day2/: prompt_a.md  prompt_b.md
src/day2/python/: day2.py
src/day2/rust/: mod.rs
src/day2/typescript/: main.ts
src/day3/typescript/: main.test.ts  main.ts
src/day4/typescript/: main.test.ts  main.ts
src/day5/typescript/: main.test.ts  main.ts
src/day6/typescript/: main.test.ts  main.ts
