[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "2023_day1"
path = "src/2023/day1/rust/mod.rs"

[[bin]]
name = "2023_day2"
path = "src/2023/day2/rust/mod.rs"

[[bin]]
name = "2024_day1"
path = "src/2024/day1/rust/mod.rs"

[[bin]]
name = "2024_day2"
path = "src/2024/day2/rust/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
