[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "2023_day1"
path = "src/2023/day1/rust/mod.rs"

[[bin]]
name = "2023_day2"
path = "src/2023/day2/rust/mod.rs"

[[bin]]
name = "2024_day1"
path = "src/2024/day1/rust/mod.rs"

[[bin]]
name = "2024_day2"
path = "src/2024/day2/rust/mod.rs"

[[bin]]
name = "2024_day3"
path = "src/2024/day3/rust/mod.rs"

[[bin]]
name = "2024_day4"
path = "src/2024/day4/rust/mod.rs"

[[bin]]
name = "2024_day5"
path = "src/2024/day5/rust/mod.rs"

[[bin]]
name = "2024_day6"
path = "src/2024/day6/rust/mod.rs"

[[bin]]
name = "2024_day7"
path = "src/2024/day7/rust/mod.rs"

[[bin]]
name = "2024_day8"
path = "src/2024/day8/rust/mod.rs"

[[bin]]
name = "2025_day1"
path = "src/2025/day1/rust/mod.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# enum_glob_use = "warn"
# pedantic = "deny"
# nursery = "warn"
# unwrap_used = "warn"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[dependencies]
regex = "1.11.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
